# SponsorTrack

./: .gitignore  .pre-commit-config.yaml  HF_README.md  README.md  app.py  huggingface.yaml  pyproject.toml  pytest.ini  requirements.txt  sshdb.sh
.github/workflows/: ci.yml  deploy_hf_spaces.yml  ruff-action.yml  sync_to_hf.yml
alembic/: env.py
alembic/versions/: 0385449d7ae5_add_test_schema.py  0cd437bda9b8_fix_relationships.py  0fc84833d866_rename_extract_to_sponsorship.py  102008005073_fix_fk_metadata.py  117975c15721_add_flag.py  1620f43714c8_initiate_prod.py  1a9c834127ab_add_videometadata.py  1ef882c91f7b_remove_duration_from_sponsored_segment.py  210ef4cadf9d_add_prompt_column_to_generated_.py  2fbe7ad7f36b_add_sponsorship_table.py  4850fb1d6d04_remove_uploader_id_field_from_video.py  49855a32c5f9_remove_username_field.py  49cb107f27be_edit_flag_column_names.py  4d4fff8e0f1d_fix_sponsorship_id_relationship.py  4feee792858a_fix_accesstoken_user_relationship.py  52661e345870_add_video_and_sponsored_segment.py  53e37a5b1ddb_make_provider_nullable.py  60e7eb422285_add_superuser_and_validated_fields_to_.py  69dd25143b3e_nullable_video_fields.py  6a0c33a78e70_rename_sponsorship_to_.py  6bcc36dc4489_split_sponsorships_into_3_tables.py  6d61ab25cda8_fresh_migration.py  86143cab6110_initial_migration.py  8730ba525c40_make_flag_generic.py  993626339da8_expand_flag_entity_types.py  9b56c45b4b1a_create_prod_schema.py  a5f5860899a4_add_value_fields_to_flags.py  ab5dfea01f4e_make_subtitles_nullable.py  b29b6bd60669_add_videoflag_sponsorshipflag.py  b9e577741f98_reset.py  c082831e6841_copy_dev_to_prod.py  c33b8f0837f1_unique_pk_ids.py  cb136460ed24_add_new_columns_to_sponsorship_and_video.py  ce72fcca9378_fix_model_imports.py  d2944d4cfb3b_make_video_id_unique_in_videometadata.py  e046109dc308_make_sure_sponsored_segments_don_t_.py  e2f1a50ba1cd_set_default_created_at_and_updated_at.py  f3247f48ae13_change_flag_relationship_to_sponsorship.py
tests/: conftest.py
(+171 files in other folders)
