[project]
name = "sponsortrack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "coverage>=7.8.0",
    "gevent>=25.5.1",
    "gradio>=5.29.0",
    "huggingface-hub>=0.31.1",
    "pre-commit>=4.2.0",
    "pydantic>=2.11.4",
    "pytest>=8.3.5",
    "youtube-transcript-api>=1.0.3",
    "yt-dlp>=2025.4.30",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
