[project]
name = "sponsortrack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16.1",
    "asyncpg>=0.30.0",
    "asyncssh>=2.21.0",
    "coverage>=7.8.0",
    "fastapi[standard]>=0.115.12",
    "gevent>=25.5.1",
    "gradio>=5.29.0",
    "huggingface-hub>=0.31.1",
    "langcodes>=3.5.0",
    "openai>=1.97.0",
    "pre-commit>=4.2.0",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.10.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=1.0.0",
    "pytest-env>=1.1.5",
    "youtube-transcript-api>=1.1.0",
    "yt-dlp>=2025.4.30",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
